third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_unpack_assign_lhs_mdot_no_addr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:4:14
  │
4 │         false::M { f } = 0;
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'
